src/pages/FormEditor/FormSandbox/FormStructure/FormSectionElement/style.module.css
.container {
    flex: 1;
    border: 2px solid rgba(84, 119, 152, 0.32);
    width: 100%;
    border-radius: 16px !important;
    margin-bottom: 24px;
    overflow: hidden;
}

.title {
    display: flex;
    align-items: center;
    width: 100%;
    height: fit-content;
}

.title {
    gap: 8px;
}

.button.button {
    border-radius: 50%;
    min-width: 0;
    height: 45px;
    width: 45px;
    color: black;
}

.content {
    display: flex;
    flex-direction: column;
    gap: 18px;
    padding: 20px 12px !important;
    flex: 1 0 auto;
    max-height: 100%;
    overflow-y: scroll;
    width: 100%;
}

.bottomDropZone {
    height: 28px;
    flex-shrink: 0;
}

.emptySectionPlaceholder {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    padding: 20px 12px !important;
}

.emptyTitle {
    color: #a7abb1;
    font-style: italic;
}

.catalogArrowIcon {
    animation: bounceRight 1s ease-in-out infinite;
}

.sectionError {
    border-color: #d32f2f !important;
}

@keyframes bounceRight {
    0% {
        transform: translateX(0);
    }

    50% {
        transform: translateX(-5px);
    }

    100% {
        transform: translateX(0);
    }
}

